added functionality back and added images to cards

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,29 +74,29 @@ position: absolute;
 .jan-pic {
   background-image: url(../images/jan-pic.png);
 }
-.docker-logo {
-  background-image: url(../images/docker-logo.jpg);
+.vanjie-pic {
+  background-image: url(../images/vanjie-pic.jpg);
 }
-.github-logo {
-  background-image: url(../images/gitHub-logo.png);
+.valentina-pic {
+  background-image: url(../images/valentina-pic.jpg);
 }
-.html-logo {
-  background-image: url(../images/html-logo.png);
+.shangela-pic {
+  background-image: url(../images/shangela-pic.png);
 }
-.js-logo {
-  background-image: url(../images/js-logo.png);
+.alyssa-pic {
+  background-image: url(../images/alyssa-pic.JPG);
 }
-.mysql-logo {
-  background-image: url(../images/mysql-logo.jpg);
+.aiden-pic {
+  background-image: url(../images/aiden-pic.jpg);
 }
-.node-logo {
-  background-image: url(../images/node-logo.png);
+.farrah-pic {
+  background-image: url(../images/farrah-pic.jpg);
 }
-.php-logo {
-  background-image: url(../images/php-logo.jpeg);
+.aja-pic {
+  background-image: url(../images/aja-pic.png);
 }
-.react-logo {
-  background-image: url(../images/react-logo.png);
+.trixie-pic {
+  background-image: url(../images/trixie-pic.jpg);
 }
 
 /*modal section*/
